# novomatic-recrutation

./: .gitignore  README.md
binary_operation/: CMakeLists.txt  README.md  calculate.hpp  conanfile.py  main.cpp  tests.cpp  windows.conf
binary_operation/include/: Calculate.hpp  Concatenate.hpp  StringConcatenate.hpp  StringValue.hpp  Value.hpp
collisions/: CMakeLists.txt  README.md  conan.conf  conanfile.py  config.json  main.cpp  tests.cpp
collisions/include/: Application.h  Collisions.h  GameObject.h  Player.h  Triangle.h  Vec2.h  Vec3.h
collisions/src/: Application.cpp  Collisions.cpp  GameObject.cpp  Player.cpp  Triangle.cpp  Vec2.cpp  Vec3.cpp
search_engine/: CMakeLists.txt  README.md  conanfile.py  config.json  engine.cpp  imgui.ini  tests.cpp
search_engine/include/: Application.h  SearchEngine.h  Trie.h  TrieNode.h
search_engine/src/: Application.cpp  SearchEngine.cpp  Trie.cpp  TrieNode.cpp
